<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/detail_popup_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_local_music_more_scan_local_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/icon_scan_local_music" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_local_music"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/big_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_local_music_more_sort_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/icon_sort_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_sort_mode"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/big_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_local_music_more_get_cover_and_lrc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/icon_get_lrc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_cover_and_lrc"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/big_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_local_music_more_up_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/icon_up_quality" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_quality"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/big_text_size" />

    </LinearLayout>

</LinearLayout>