<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_my_player_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_top_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_my_player_back"
                android:layout_width="@dimen/action_top_height"
                android:layout_height="match_parent"
                android:background="@drawable/selector_back_bg"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/left_back" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/ll_my_player_back"
                android:gravity="center_vertical"
                android:text="@string/my_singer"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/large_text_size" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_player_none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/my_player_none"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/collect_love_player"
            android:textColor="@color/Gray"
            android:textSize="@dimen/middle_text_size" />

    </LinearLayout>


</LinearLayout>