<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_top_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_song_select_back"
                android:layout_width="@dimen/action_top_height"
                android:layout_height="match_parent"
                android:background="@drawable/selector_back_bg"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/left_back" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_song_select_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/selected_item_count"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/large_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_song_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/selected_all"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_15" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rl_song_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/top_height" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_song_select_operation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_height"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_song_select_next_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_music_item_bg"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/song_select_next_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_play"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/normal_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_song_select_add_to_song_sheet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_music_item_bg"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/song_select_add_to_song_sheet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_song_sheet"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/normal_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_song_select_download"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_music_item_bg"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/song_select_download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down_load"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/normal_text_size" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>