<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_popup_song_sheet_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="创建的歌单"
        android:textColor="@color/colorDarkGray"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/ll_popup_song_sheet_detail_download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/song_sheet_download" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/song_sheet_download"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_popup_song_sheet_detail_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sogn_sheet_delect" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/song_sheet_delete"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_popup_song_sheet_detail_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/selector_music_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/song_sheet_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/song_sheet_edit"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>